# spatz_interfaces

./: CMakeLists.txt  package.xml
msg/: BirdEyeParam.msg  ControlError.msg  ControlSetpoint.msg  ControlStatus.msg  ControlVarsVESC.msg  Environment.msg  ExtrinsicCalib.msg  HardwareIn.msg  HirnSection.msg  IntersectionOut.msg  Lane.msg  LaneContainer.msg  LaneContainerPoint.msg  LaneFeedback.msg  LaneOption.msg  LanePoint.msg  Lights.msg  RCMode.msg  Spatz.msg  Spatz11SensorData.msg  SpatzenhirnBehaviour.msg  Trajectory.msg  TrajectoryPlanningInput.msg  TrajectoryPlanningSection.msg  TrajectoryState.msg
msg/AbstractionInterface/: AbstractionInterfaceList.msg
msg/AbstractionInterface/Types/: AbstractionBarredArea.msg  AbstractionCrosswalk.msg  AbstractionFloorSign.msg  AbstractionIntersection.msg  AbstractionObstacle.msg  AbstractionParkSpot.msg  AbstractionPedIsle.msg  AbstractionSign.msg
msg/DetectionInterface/: DetectionInterfaceList.msg
msg/DetectionInterface/Interfaces/: Classification.msg  Expansion.msg  Locatable.msg
msg/DetectionInterface/Types/: BarredArea.msg  FloorSign.msg  IntersectionPoint.msg  Obstacle.msg  ParkSpot.msg  PedIsle.msg  Pedestrian.msg  Sign.msg
msg/ILQRTrajectory/: ILQRTrajectory.msg  ILQRTrajectoryControl.msg  ILQRTrajectoryControlGain.msg  ILQRTrajectoryCovariance.msg  ILQRTrajectoryState.msg
msg/Interfaces/: Detection.msg  LocatableWithCovariance.msg
msg/Spatz/: Spatz.msg  SystemParams.msg
msg/spatz11/: FourWheelDouble.msg  IndicatorCommand.msg  Spatz11SensorData.msg
